<resources>
    <string name="app_name">ScannApp</string>

    <string name="app_title">Bluetooth + WLAN Scan App</string>

    <string name="enterPin">Enter PIN</string>
    <string name="submitPin">Submit</string>


    <string name="wlanTxt">WLAN</string>
    <string name="bluetoothTxt">Bluetooth</string>

    <string name="quitBtnTxt">Quit</string>
    <string name="startBtnTxt">Start</string>
    <string name="stopBtnTxt">Stop</string>
    <string name="settingsBtnTxt">Settings</string>

    <string name="PinPrefsKey">PinKey</string>

    <string name="oldPin">Input Old Pin:</string>
    <string name="newPin">Input New Pin:</string>
    <string name="changePin">Change Pin</string>
    <string name="changePinTitle">Change Your Pin</string>
    <string name="exportDatabaseDataTitle">Export Data from Database</string>
    <string name="exportData">export Data</string>
    <string name="deleteData">delete Data</string>

    <string name="bluetoothWarning">BluetoothWarningText</string>
    <string name="wifiWarning">Wifi is not activated, pls turn it on!</string>
    <string name="OkTxt">OK</string>

</resources>